--- a/style.css
+++ b/style.css
@@ -651,3 +651,221 @@ color: cadetblue;
     padding: 0;
     width: 300px;
 }
+.splash{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: cadetblue;
+    z-index: 200;
+    margin: 0;
+    padding: 0;
+    top: 0;
+}
+.splash h1{
+    position: absolute;
+    top: 60%;
+    left: 40%;
+    font-size: 50px;
+}
+.astronaut-dabbing {
+    position: absolute;
+    top: 40%;
+    left: 18%;
+    width: 400px;
+    animation: hide 0.5s 1s forwards;
+}
+.astronaut-takeoff {
+    position: absolute;
+    top: 93%;
+    left: 18%;
+}
+.animation {
+    animation: glide 3s ease-out forwards;
+}  
+@keyframes hide {
+    0%{
+      opacity: 1;
+    }
+    50%{
+      opacity: 0.5;
+    }
+    75%{
+      opacity: 0.7;
+    }
+    100%{
+      opacity: 0;
+    }
+  }
+@keyframes glide {
+    50%{
+      transform: scale(0.8);
+    }
+    100%{
+      transform: translateY(-900px) scale(0.1);
+    }
+}
+@media(max-width: 900px){
+    *{
+        font-size: 2.5vw;
+        padding: 0px;
+        margin: 0px;
+    }
+    .splash h1{
+        font-size: 3vw;
+    }
+    .astronaut-dabbing{
+        top: 56%;
+        left: 18%;
+        width: 200px;
+    }
+    .astronaut-dabbing{
+        top: 96%;
+        left: 7%;
+    }
+    main{
+        margin-top: 40px;
+    }
+    .header{
+        height: 40px;
+    }
+    .header-flex{
+        display: block;
+        padding: 3px;
+    }  
+    .jumbotron-title{
+        font-size: 4vw;
+    }  
+    .mini-text-flex{
+        justify-content: center;
+        margin: 3px;
+    }
+    .jumbotron-text{
+        text-align: center;
+    }  
+    .mini-text{
+        text-align: center;
+        padding-bottom: 30px;
+        margin: 10px;
+    }  
+    .jumbotron img{
+        display: none;
+    }  
+    .wave1{
+        top: 195px;
+    }  
+    .wave2{
+        top: 210px;
+    }  
+    aside{
+        display: none;
+    }
+    .main-content{
+        margin: 0;
+        justify-content: center;
+    }  
+    .content{
+        margin: 10px 0;
+    }
+    .image-slider{
+        width: 50%;
+        height: 240px;
+    }  
+    .slide-text{
+        left: 0;
+        bottom: 0;
+    }  
+    .slide-text h2{
+        width: 150px;
+        height: auto;
+        font-size: 20px;
+    }
+    .slide-text p{
+        font-size: 10px;
+    }  
+    .article-title{
+        font-size: 4vw;
+    }  
+    .project-container{
+        display: block;
+    }
+    .project-container{
+        margin-bottom: 20px;
+    }
+    .project img{
+        max-width: 100%;
+        max-height: 20%;
+    }  
+    .video-content{
+        max-width: 100%;
+        max-height: 220px;
+    }
+    .page-title h1{
+        font-size: 4vw;
+    }  
+    .project-detail{
+        display: block;
+    } 
+    .project-detail img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 50%;
+        max-height: 50%;
+    }  
+    .project-description h3{
+        font-size: 2vw;
+        text-align: center;
+    }  
+    .project-description p{
+        font-size: 2vw;
+    }
+    .rocket-container{
+        display: none;
+    }  
+    .contact-container{
+        justify-content: center;
+    }  
+    .illustration-img{
+        display: none;
+    }  
+    .modal{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        max-width: 60%;
+        max-height: 40%;
+        padding: 10px;
+    }  
+    .modal h3{
+        margin: 0;
+        padding: 0;
+        font-size: 4vw;
+    }
+    .modal img{
+        max-width: 60%;
+    }  
+    .section-title{
+        font-size: 4vw;
+    }  
+    .section-subtitle{
+        font-size: 2vw;
+    }  
+    .blob-image{
+        max-width: 60%;
+        max-height: 60%;
+        transform: rotate(-90deg);
+    }  
+    .blogger-image{
+        position: absolute;
+        max-width: 27%;
+        max-height: 50%;
+        left: 37%;
+        top: 100px;
+    }
+    .about-description p{
+        width: 80%;
+    }  
+    .skill-item{
+        margin: 5px;
+    }
+}
